@@ -277,6 +277,7 @@ Changes:
 - Integrate upgrade of Handbrake 0.9.5 into setup.sh 
 - Integrate installation of makemkv 1.6.4 into setup.sh 
 - Integrate upgrade of makemkv 1.6.4 into setup.sh 
+- Added a single copy-protection detection string to state.sh
 
 Fixes:
 
